webp format added

--- a/index.html
+++ b/index.html
@@ -91,20 +91,20 @@
                 <div class="portfolio-content">
                     <div class="portfolio-left-column">
                         <div class="portfolio-plate mojem-plate">
-                            <img src="./assets/images/mojem.png" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/mojem.webp" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Можем</div>
                         </div>
                         <div class="portfolio-plate sens-visual-plate">
-                            <img src="./assets/images/sens-visual.png" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/sens-visual.webp" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Сенс візуал</div>
                         </div>
                         <div class="portfolio-plate bohlib-plate">
-                            <img src="./assets/images/bohlib.png" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/bohlib.webp" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Бохліб</div>
                         </div>
                         <div class="portfolio-plate bigmoney-plate">
                             <div class="plate-tag">Бігмані</div>
-                            <img src="./assets/images/bigmoney.png" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/bigmoney.webp" alt="" class="adaptive-plate-img">
                         </div>
                     </div>
                     <div class="portfolio-right-column">
@@ -113,16 +113,16 @@
                             <div class="lower-portfolio-title">наприклад</div>
                         </div>
                         <div class="portfolio-plate gnrtr-plate">
-                            <img src="./assets/images/gnrtr.png" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/gnrtr.webp" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Генератор</div>
                         </div>
                         <div class="portfolio-plate bold-plate">
-                            <img src="./assets/images/bold.png" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/bold.webp" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Болд маркетинг</div>
                         </div>
                         <div class="portfolio-plate profi-plate">
                             <div class="plate-tag">Профі-центр</div>
-                            <img src="./assets/images/profi.png" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/profi.webp" alt="" class="adaptive-plate-img">
                         </div>
                     </div>
                 </div>
