alts attributes fullfiled

--- a/index.html
+++ b/index.html
@@ -91,20 +91,20 @@
                 <div class="portfolio-content">
                     <div class="portfolio-left-column">
                         <div class="portfolio-plate mojem-plate">
-                            <img src="./assets/images/mojem.webp" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/mojem.webp" alt="Можем" class="adaptive-plate-img">
                             <div class="plate-tag">Можем</div>
                         </div>
                         <div class="portfolio-plate sens-visual-plate">
-                            <img src="./assets/images/sens-visual.webp" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/sens-visual.webp" alt="Сенс візуал" class="adaptive-plate-img">
                             <div class="plate-tag">Сенс візуал</div>
                         </div>
                         <div class="portfolio-plate bohlib-plate">
-                            <img src="./assets/images/bohlib.webp" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/bohlib.webp" alt="Бохліб" class="adaptive-plate-img">
                             <div class="plate-tag">Бохліб</div>
                         </div>
                         <div class="portfolio-plate bigmoney-plate">
                             <div class="plate-tag">Бігмані</div>
-                            <img src="./assets/images/bigmoney.webp" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/bigmoney.webp" alt="Бігмані" class="adaptive-plate-img">
                         </div>
                     </div>
                     <div class="portfolio-right-column">
@@ -113,16 +113,16 @@
                             <div class="lower-portfolio-title">наприклад</div>
                         </div>
                         <div class="portfolio-plate gnrtr-plate">
-                            <img src="./assets/images/gnrtr.webp" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/gnrtr.webp" alt="Генератор" class="adaptive-plate-img">
                             <div class="plate-tag">Генератор</div>
                         </div>
                         <div class="portfolio-plate bold-plate">
-                            <img src="./assets/images/bold.webp" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/bold.webp" alt="Болд маркетинг" class="adaptive-plate-img">
                             <div class="plate-tag">Болд маркетинг</div>
                         </div>
                         <div class="portfolio-plate profi-plate">
                             <div class="plate-tag">Профі-центр</div>
-                            <img src="./assets/images/profi.webp" alt="" class="adaptive-plate-img">
+                            <img src="./assets/images/profi.webp" alt="Профі-центр" class="adaptive-plate-img">
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     Ми точно покажемо ваші<br><span>переваги над конкурентами,</span><br class="benefits-title-br"> бо
                     ми:
                 </div>
-                <img src="./assets/images/benefits-content.png" class="benefits-content" alt="">
+                <img src="./assets/images/benefits-content.png" class="benefits-content" alt="Переваги">
                 <ul class="adaptive-benefits-content">
                     <li>зробимо з вами<br> <span>знайомство-консультацію</span></li>
                     <li>проведемо <span>аналіз<br> конкурентів</span></li>
@@ -144,9 +144,9 @@
                     <li>зробимо ваш сайт<br> <span>унікальним</span></li>
                 </ul>
                 <div class="adaptive-benefits-stars">
-                    <img src="./assets/images/adaptive-benefits-star.png" alt="">
-                    <img src="./assets/images/adaptive-benefits-star.png" alt="">
-                    <img src="./assets/images/adaptive-benefits-star.png" alt="">
+                    <img src="./assets/images/adaptive-benefits-star.png" alt="star">
+                    <img src="./assets/images/adaptive-benefits-star.png" alt="star">
+                    <img src="./assets/images/adaptive-benefits-star.png" alt="star">
                 </div>
             </div>
             <div class="container team-container">
@@ -154,54 +154,56 @@
                 <div class="team-members">
                     <div class="team-left-grid">
                         <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.png" class="team-l-img"
-                                alt="">
-                            <img src="./assets/images/marketer1-mobile.png" class="team-s-img" alt="">
+                                alt="Marketer">
+                            <img src="./assets/images/marketer1-mobile.png" class="team-s-img" alt="Marketer">
                             <div class="member-tag">Marketer</div>
                         </div>
                         <div class="photo-area2 sm-photo"><img src="./assets/images/marketer2.png" class="team-l-img"
-                                alt="">
-                            <img src="./assets/images/marketer2-mobile.png" class="team-s-img" alt="">
+                                alt="Marketer">
+                            <img src="./assets/images/marketer2-mobile.png" class="team-s-img" alt="Marketer">
                             <div class="member-tag">Marketer</div>
                         </div>
                         <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.png"
-                                class="team-l-img" alt="">
-                            <img src="./assets/images/project-manager-mobile.png" class="team-s-img" alt="">
+                                class="team-l-img" alt="Project manager">
+                            <img src="./assets/images/project-manager-mobile.png" class="team-s-img" alt="Project manager">
                             <div class="member-tag">Project manager</div>
                         </div>
                         <div class="single-photo-area2 l-photo"><img src="./assets/images/team-img.png"
-                                class="team-l-img" alt="">
+                                class="team-l-img" alt="Team">
                         </div>
                     </div>
                     <div class="team-right-grid">
                         <div class="single-photo-area3 l-photo"><img src="./assets/images/designer1.png"
-                                class="team-l-img" alt="">
-                            <img src="./assets/images/designer1-mobile.png" class="team-s-img" alt="">
+                                class="team-l-img" alt="UI/UX designer">
+                            <img src="./assets/images/designer1-mobile.png" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
                         <div class="single-photo-area2 single-photo-area2-mobile l-photo"><img
-                                src="./assets/images/team-img.png" class="team-l-img" alt="">
+                                src="./assets/images/team-img.png" class="team-l-img" alt=">UI/UX designer">
                         </div>
                         <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.png" class="team-l-img"
-                                alt="">
-                            <img src="./assets/images/designer3-mobile.png" class="team-s-img" alt="">
+                                alt="UI/UX designer">
+                            <img src="./assets/images/designer3-mobile.png" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
                         <div class="photo-area4 sm-photo"><img src="./assets/images/designer3.png" class="team-l-img"
-                                alt="">
-                            <img src="./assets/images/designer2-mobile.png" class="team-s-img" alt="">
+                                alt="UI/UX designer">
+                            <img src="./assets/images/designer2-mobile.png" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.png" class="team-l-img" alt="">
-                            <img src="./assets/images/ppc-mobile.png" class="team-s-img" alt="">
+                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.png" class="team-l-img"
+                                alt="PPC-Specialist">
+                            <img src="./assets/images/ppc-mobile.png" class="team-s-img" alt="PPC-Specialist">
                             <div class="member-tag">PPC-Specialist</div>
                         </div>
-                        <div class="photo-area6 sm-photo"><img src="./assets/images/front-end.png" alt="">
+                        <div class="photo-area6 sm-photo"><img src="./assets/images/front-end.png"
+                                alt="Front-end Specialist">
                             <div class="member-tag">Front-end Specialist</div>
                         </div>
                         <div class="photo-area7 sm-photo"></div>
                         <div class="photo-area8 sm-photo"><img src="./assets/images/ideolog.png" class="team-l-img"
-                                alt="">
-                            <img src="./assets/images/ideolog-mobile.png" class="team-s-img" alt="">
+                                alt="Ідеолог проєкту">
+                            <img src="./assets/images/ideolog-mobile.png" class="team-s-img" alt="Ідеолог проєкту">
                             <div class="member-tag">Ідеолог проєкту</div>
                         </div>
                     </div>
@@ -297,12 +299,14 @@
                 </div>
             </div>
             <div class="container result-container">
-                <div class="left-top-corner corners"><img src="./assets/images/CornerTopLeft.png" alt=""></div>
-                <div class="right-top-corner corners"><img src="./assets/images/CornerTopRight.png" alt=""></div>
-                <div class="left-bottom-corner corners"><img src="./assets/images/CornerBottomLeft.png" alt=""></div>
-                <div class="right-bottom-corner corners"><img src="./assets/images/CornerBottomRight.png" alt=""></div>
+                <div class="left-top-corner corners"><img src="./assets/images/CornerTopLeft.png" alt="corner"></div>
+                <div class="right-top-corner corners"><img src="./assets/images/CornerTopRight.png" alt="corner"></div>
+                <div class="left-bottom-corner corners"><img src="./assets/images/CornerBottomLeft.png" alt="corner">
+                </div>
+                <div class="right-bottom-corner corners"><img src="./assets/images/CornerBottomRight.png" alt="corner">
+                </div>
                 <div class="result-content">
-                    <img src="./assets/images/5stage.png" alt="">
+                    <img src="./assets/images/5stage.png" alt="result">
                     <div class="result-title">ви кайфуєте<br> від результату</div>
                 </div>
             </div>
@@ -312,8 +316,8 @@
             </div>
             <div class="container prices-container">
                 <p>Знаємо, що у вас в голові<br> залишилось одне питання:</p>
-                <img class="prices1-image" src="./assets/images/price-image1.png" alt="">
-                <img class="prices2-image" src="./assets/images/price-image2.png" alt="">
+                <img class="prices1-image" src="./assets/images/price-image1.png" alt="Price">
+                <img class="prices2-image" src="./assets/images/price-image2.png" alt="Price">
             </div>
             <div class="container form-container">
                 <div class="form-title">Запис на безкоштовну<br>консультацію</div>
