meta tags added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="./css/style.css">
 
+    <meta name="description" content="Fast - website agency" />
+
     <link type="image/x-icon" rel="shortcut icon" href="./img/favicons/32x32.ico">
     <link type="image/png" sizes="16x16" rel="icon" href="/img/favicons/16x16.png">
     <link type="image/png" sizes="32x32" rel="icon" href="/img/favicons/32x32.png">
@@ -165,7 +167,8 @@
                         </div>
                         <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.png"
                                 class="team-l-img" alt="Project manager">
-                            <img src="./assets/images/project-manager-mobile.png" class="team-s-img" alt="Project manager">
+                            <img src="./assets/images/project-manager-mobile.png" class="team-s-img"
+                                alt="Project manager">
                             <div class="member-tag">Project manager</div>
                         </div>
                         <div class="single-photo-area2 l-photo"><img src="./assets/images/team-img.png"
