--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <meta name="description" content="Fast - website agency" />
 
-    <link type="image/x-icon" rel="shortcut icon" href="./img/favicons/32x32.ico">
-    <link type="image/png" sizes="16x16" rel="icon" href="/img/favicons/16x16.png">
-    <link type="image/png" sizes="32x32" rel="icon" href="/img/favicons/32x32.png">
-    <link type="image/png" sizes="96x96" rel="icon" href="/img/favicons/96x96.png">
-    <link type="image/png" sizes="120x120" rel="icon" href="/img/favicons/120x120.png">
+    <link type="image/x-icon" rel="shortcut icon" href="./assets/images/favicons/32x32.ico">
+    <link type="image/png" sizes="16x16" rel="icon" href="./assets/images/favicons/16x16.png">
+    <link type="image/png" sizes="32x32" rel="icon" href="./assets/images/favicons/32x32.png">
+    <link type="image/png" sizes="96x96" rel="icon" href="./assets/images/favicons/96x96.png">
+    <link type="image/png" sizes="120x120" rel="icon" href="./assets/images/favicons/120x120.png">
 
     <title>FAST.</title>
 </head>
