--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                                         <li class="menu-item team-btn"><a>Команда</a></li>
                                         <li class="menu-item process-btn"><a>Процес</a></li>
                                     </ul>
+                                    <button class="header-order-btn order-btn">
+                                        Замовити
+                                    </button>
+                                    <span><a href="tel:+380674011151">+380 (67) 40 111 51</a></span>
                                 </nav>
                             </nav>
                         </div>
