png to webp optimization

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
                     <a class="header-logo main-btn">FAST.</a>
                     <nav class="header-nav">
                         <ul>
-                            <li class="portfolio-btn"><a>Портфолио</a></li>
-                            <li class="about-us-btn"><a>О нас</a></li>
-                            <li class="contacts-btn"><a>Контакты</a></li>
+                            <li class="portfolio-btn"><a>
+                                    Портфоліо</a></li>
+                            <li class="about-us-btn"><a>Про нас</a></li>
+                            <li class="contacts-btn"><a>
+                                    Контакти</a></li>
                             <li class="team-btn"><a>Команда</a></li>
-                            <li class="process-btn"><a>Процес</a></li>
+                            <li class="process-btn"><a>
+                                    Процес</a></li>
                         </ul>
                         <button class="header-order-btn order-btn">
                             Замовити
@@ -47,11 +50,14 @@
                             <nav class="menu-body">
                                 <nav class="menu-list">
                                     <ul>
-                                        <li class="menu-item portfolio-btn"><a>Портфолио</a></li>
-                                        <li class="menu-item about-us-btn"><a>О нас</a></li>
-                                        <li class="menu-item contacts-btn"><a>Контакты</a></li>
+                                        <li class="menu-item portfolio-btn"><a>
+                                                Портфоліо</a></li>
+                                        <li class="menu-item about-us-btn"><a>Про нас</a></li>
+                                        <li class="menu-item contacts-btn"><a>
+                                                Контакти</a></li>
                                         <li class="menu-item team-btn"><a>Команда</a></li>
-                                        <li class="menu-item process-btn"><a>Процес</a></li>
+                                        <li class="menu-item process-btn"><a>
+                                                Процес</a></li>
                                     </ul>
                                     <button class="header-order-btn order-btn">
                                         Замовити
@@ -168,19 +174,19 @@
                 <div class="team-title">наша <span>крутезна</span><br> команда</div>
                 <div class="team-members">
                     <div class="team-left-grid">
-                        <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.png" class="team-l-img"
+                        <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.webp" class="team-l-img"
                                 alt="Marketer">
-                            <img src="./assets/images/marketer1-mobile.png" class="team-s-img" alt="Marketer">
+                            <img src="./assets/images/marketer1-mobile.webp" class="team-s-img" alt="Marketer">
                             <div class="member-tag">Marketer</div>
                         </div>
-                        <div class="photo-area2 sm-photo"><img src="./assets/images/marketer2.png" class="team-l-img"
+                        <div class="photo-area2 sm-photo"><img src="./assets/images/marketer2.webp" class="team-l-img"
                                 alt="Marketer">
-                            <img src="./assets/images/marketer2-mobile.png" class="team-s-img" alt="Marketer">
+                            <img src="./assets/images/marketer2-mobile.webp" class="team-s-img" alt="Marketer">
                             <div class="member-tag">Marketer</div>
                         </div>
-                        <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.png"
+                        <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.webp"
                                 class="team-l-img" alt="Project manager">
-                            <img src="./assets/images/project-manager-mobile.png" class="team-s-img"
+                            <img src="./assets/images/project-manager-mobile.webp" class="team-s-img"
                                 alt="Project manager">
                             <div class="member-tag">Project manager</div>
                         </div>
@@ -189,7 +195,7 @@
                         </div>
                     </div>
                     <div class="team-right-grid">
-                        <div class="single-photo-area3 l-photo"><img src="./assets/images/designer1.png"
+                        <div class="single-photo-area3 l-photo"><img src="./assets/images/designer1.webp"
                                 class="team-l-img" alt="UI/UX designer">
                             <img src="./assets/images/designer1-mobile.png" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
@@ -197,19 +203,19 @@
                         <div class="single-photo-area2 single-photo-area2-mobile l-photo"><img
                                 src="./assets/images/team-img.png" class="team-l-img" alt=">UI/UX designer">
                         </div>
-                        <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.png" class="team-l-img"
+                        <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.webp" class="team-l-img"
                                 alt="UI/UX designer">
-                            <img src="./assets/images/designer3-mobile.png" class="team-s-img" alt=">UI/UX designer">
+                            <img src="./assets/images/designer3-mobile.webp" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area4 sm-photo"><img src="./assets/images/designer3.png" class="team-l-img"
+                        <div class="photo-area4 sm-photo"><img src="./assets/images/designer3.webp" class="team-l-img"
                                 alt="UI/UX designer">
-                            <img src="./assets/images/designer2-mobile.png" class="team-s-img" alt=">UI/UX designer">
+                            <img src="./assets/images/designer2-mobile.webp" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.png" class="team-l-img"
+                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.webp" class="team-l-img"
                                 alt="PPC-Specialist">
-                            <img src="./assets/images/ppc-mobile.png" class="team-s-img" alt="PPC-Specialist">
+                            <img src="./assets/images/ppc-mobile.webp" class="team-s-img" alt="PPC-Specialist">
                             <div class="member-tag">PPC-Specialist</div>
                         </div>
                         <div class="photo-area6 sm-photo"><img src="./assets/images/front-end.png"
@@ -217,9 +223,9 @@
                             <div class="member-tag">Front-end Specialist</div>
                         </div>
                         <div class="photo-area7 sm-photo"></div>
-                        <div class="photo-area8 sm-photo"><img src="./assets/images/ideolog.png" class="team-l-img"
+                        <div class="photo-area8 sm-photo"><img src="./assets/images/ideolog.webp" class="team-l-img"
                                 alt="Ідеолог проєкту">
-                            <img src="./assets/images/ideolog-mobile.png" class="team-s-img" alt="Ідеолог проєкту">
+                            <img src="./assets/images/ideolog-mobile.webp" class="team-s-img" alt="Ідеолог проєкту">
                             <div class="member-tag">Ідеолог проєкту</div>
                         </div>
                     </div>
