--- a/index.html
+++ b/index.html
@@ -82,26 +82,32 @@
         </div>
         <main class="main">
             <div class="stretched-words">
-                <span>Якщо вам</span>
+                <span data-aos="fade-up" data-aos-delay="50" data-aos-duration="500">Якщо вам</span>
             </div>
             <div class="container benefits-grid-container">
                 <div class="benefits-grid-mobile">
                 </div>
                 <div class="benefits-grid">
-                    <div class="s1"><span>треба щоб продавало</span></div>
-                    <div class="s2"><span>треба швиденько</span></div>
-                    <div class="s3"><span>треба класненько</span></div>
-                    <div class="s4"><span>треба шось стильне</span></div>
+                    <div class="s1"><span data-aos="fade-up" data-aos-delay="50" data-aos-duration="500">треба щоб
+                            продавало</span></div>
+                    <div class="s2"><span data-aos="fade-up" data-aos-delay="350" data-aos-duration="500">треба
+                            швиденько</span></div>
+                    <div class="s3"><span data-aos="fade-up" data-aos-delay="50" data-aos-duration="500">треба
+                            класненько</span></div>
+                    <div class="s4"><span data-aos="fade-up" data-aos-delay="350" data-aos-duration="500">треба шось
+                            стильне</span></div>
                 </div>
 
             </div>
             <div class="container-wrapper">
                 <div class="container about-container">
                     <div class="about-block">
-                        <div class="about-title" data-aos="fade-down">то цей<br> сайт<br>
+                        <div class="about-title" data-aos="fade-down" data-aos-delay="50" data-aos-duration="500">то
+                            цей<br> сайт<br>
                             буде</div>
-                        <div class="dividing-line"></div>
-                        <div class="about-description" data-aos="fade-down">зроблений якісно і структурно
+                        <div class="dividing-line" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500"></div>
+                        <div class="about-description" data-aos="fade-down" data-aos-delay="50" data-aos-duration="500">
+                            зроблений якісно і структурно
                             підключений до систем аналітики
                             відповідає маркетинговим цілям
                             продає ваші послуги та продукти</div>
@@ -113,43 +119,50 @@
                     <div class="portfolio-left-column">
                         <div class="portfolio-plate mojem-plate">
                             <img src="./assets/images/mojem.webp" alt="Можем" class="adaptive-plate-img">
-                            <div class="plate-tag">Можем</div>
+                            <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Можем
+                            </div>
                         </div>
                         <div class="portfolio-plate sens-visual-plate">
                             <img src="./assets/images/sens-visual.webp" alt="Сенс візуал" class="adaptive-plate-img">
-                            <div class="plate-tag">Сенс візуал</div>
+                            <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Сенс
+                                візуал</div>
                         </div>
                         <div class="portfolio-plate bohlib-plate">
                             <img src="./assets/images/bohlib.webp" alt="Бохліб" class="adaptive-plate-img">
-                            <div class="plate-tag">Бохліб</div>
+                            <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Бохліб
+                            </div>
                         </div>
                         <div class="portfolio-plate bigmoney-plate">
-                            <div class="plate-tag">Бігмані</div>
+                            <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">
+                                Бігмані</div>
                             <img src="./assets/images/bigmoney.webp" alt="Бігмані" class="adaptive-plate-img">
                         </div>
                     </div>
                     <div class="portfolio-right-column">
-                        <div class="portfolio-title">
+                        <div class="portfolio-title" data-aos="fade-right" data-aos-delay="50" data-aos-duration="500">
                             <div class="upper-portfolio-title">ось <span>наше портфоліо</span></div>
                             <div class="lower-portfolio-title">наприклад</div>
                         </div>
                         <div class="portfolio-plate gnrtr-plate">
                             <img src="./assets/images/gnrtr.webp" alt="Генератор" class="adaptive-plate-img">
-                            <div class="plate-tag">Генератор</div>
+                            <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">
+                                Генератор</div>
                         </div>
                         <div class="portfolio-plate bold-plate">
                             <img src="./assets/images/bold.webp" alt="Болд маркетинг" class="adaptive-plate-img">
-                            <div class="plate-tag">Болд маркетинг</div>
+                            <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Болд
+                                маркетинг</div>
                         </div>
                         <div class="portfolio-plate profi-plate">
-                            <div class="plate-tag">Профі-центр</div>
+                            <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">
+                                Профі-центр</div>
                             <img src="./assets/images/profi.webp" alt="Профі-центр" class="adaptive-plate-img">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container benefits-container">
-                <div class="benefits-title">
+                <div class="benefits-title" data-aos="fade-up" data-aos-delay="50" data-aos-duration="500">
                     Ми точно покажемо ваші<br><span>переваги над конкурентами,</span><br class="benefits-title-br"> бо
                     ми:
                 </div>
@@ -171,7 +184,9 @@
                 </div>
             </div>
             <div class="container team-container">
-                <div class="team-title">наша <span>крутезна</span><br> команда</div>
+                <div class="team-title" data-aos="fade-right" data-aos-delay="50" data-aos-duration="500">наша
+                    <span>крутезна</span><br> команда
+                </div>
                 <div class="team-members">
                     <div class="team-left-grid">
                         <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.webp" class="team-l-img"
@@ -233,7 +248,7 @@
             </div>
             <div class="container stages-container">
                 <div class="stages-content">
-                    <div class="stages-title">
+                    <div class="stages-title" data-aos="fade-right" data-aos-delay="50" data-aos-duration="500">
                         чому<br> вам сподобається<br><span>з нами</span> працювати?
                     </div>
 
@@ -321,15 +336,21 @@
                 </div>
             </div>
             <div class="container result-container">
-                <div class="left-top-corner corners"><img src="./assets/images/CornerTopLeft.png" alt="corner"></div>
-                <div class="right-top-corner corners"><img src="./assets/images/CornerTopRight.png" alt="corner"></div>
-                <div class="left-bottom-corner corners"><img src="./assets/images/CornerBottomLeft.png" alt="corner">
+                <div class="left-top-corner corners"><img src="./assets/images/CornerTopLeft.png" alt="corner"
+                        data-aos="fade-up-left" data-aos-delay="50" data-aos-duration="500"></div>
+                <div class="right-top-corner corners"><img src="./assets/images/CornerTopRight.png" alt="corner"
+                        data-aos="fade-up-right" data-aos-delay="50" data-aos-duration="500"></div>
+                <div class="left-bottom-corner corners"><img src="./assets/images/CornerBottomLeft.png" alt="corner"
+                        data-aos="fade-down-left" data-aos-delay="50" data-aos-duration="500">
                 </div>
-                <div class="right-bottom-corner corners"><img src="./assets/images/CornerBottomRight.png" alt="corner">
+                <div class="right-bottom-corner corners"><img src="./assets/images/CornerBottomRight.png" alt="corner"
+                        data-aos="fade-down-right" data-aos-delay="50" data-aos-duration="500">
                 </div>
                 <div class="result-content">
-                    <img src="./assets/images/5stage.png" alt="result">
-                    <div class="result-title">ви кайфуєте<br> від результату</div>
+                    <img src="./assets/images/5stage.png" alt="result" data-aos="zoom-in" data-aos-delay="50"
+                        data-aos-duration="500">
+                    <div class="result-title" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">ви
+                        кайфуєте<br> від результату</div>
                 </div>
             </div>
             <div class="container order-container">
