animations + form handler added

--- a/index.html
+++ b/index.html
@@ -354,20 +354,31 @@
                 </div>
             </div>
             <div class="container order-container">
-                <div class="order-text">Готовий, унікальний сайт<br><span>за 21 день</span></div>
-                <button class="order-button">Замовити сайт</button>
+                <div class="order-text" data-aos="fade-left" data-aos-delay="50" data-aos-duration="500">Готовий,
+                    унікальний сайт<br><span>за 21 день</span></div>
+                <button class="order-button" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Замовити
+                    сайт</button>
             </div>
             <div class="container prices-container">
-                <p>Знаємо, що у вас в голові<br> залишилось одне питання:</p>
-                <img class="prices1-image" src="./assets/images/price-image1.png" alt="Price">
-                <img class="prices2-image" src="./assets/images/price-image2.png" alt="Price">
+                <p data-aos="fade-right" data-aos-delay="50" data-aos-duration="500">Знаємо, що у вас в голові<br>
+                    залишилось одне питання:</p>
+                <img data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500" class="prices1-image"
+                    src="./assets/images/price-image1.png" alt="Price">
+                <img data-aos="fade-left" data-aos-delay="50" data-aos-duration="500" class="prices2-image"
+                    src="./assets/images/price-image2.png" alt="Price">
             </div>
             <div class="container form-container">
-                <div class="form-title">Запис на безкоштовну<br>консультацію</div>
+                <div class="form-title" data-aos="fade-left" data-aos-delay="50" data-aos-duration="500">Запис на
+                    безкоштовну<br>консультацію</div>
+                <div class="require-fields-alert">Будь ласка, заповніть всі поля</div>
+                <div class="success-form-alert">Заявку успішно надіслано</div>
                 <form action="">
-                    <input type="text" placeholder="Ім'я" name="name" required>
-                    <input type="text" placeholder="Номер телефону" name="phone" required>
-                    <button type="submit">Залишити заявку</button>
+                    <input data-aos="fade-up" data-aos-delay="50" data-aos-duration="500" type="text"
+                        class="form-name-input" placeholder="Ім'я" name="name" required>
+                    <input data-aos="fade-up" data-aos-delay="100" data-aos-duration="500" type="number"
+                        class="form-phone-input" placeholder="Номер телефону" name="phone" required>
+                    <button data-aos="fade-up" data-aos-delay="150" data-aos-duration="500" type="submit"
+                        class="form-submit-button">Залишити заявку</button>
                 </form>
             </div>
         </main>
