--- a/index.html
+++ b/index.html
@@ -386,19 +386,19 @@
             <div class="adaptive-footer-logo"><span>
                     FAST.
                 </span></div>
-            <div class="upper-footer-block" data-aos="fade-left" data-aos-delay="50" data-aos-duration="500">
+            <div class="upper-footer-block">
                 <div class="telegram">Написати нам:<br>
                     <span><a href="">Telegam</a></span>
                 </div>
-                <a class="logo" data-aos="fade-up" data-aos-delay="150" data-aos-duration="500">FAST.</a>
-                <div class="contacts" data-aos="fade-right" data-aos-delay="100" data-aos-duration="500">Контакти:<br>
+                <a class="logo">FAST.</a>
+                <div class="contacts">Контакти:<br>
                     <span><a href="tel:+380674011151">+380 (67) 40 111 51</a></span>
                 </div>
             </div>
             <div class="lower-footer-block">
-                <div class="policy" data-aos="fade-left" data-aos-delay="50" data-aos-duration="500">Політика
+                <div class="policy">Політика
                     конфіденційності</div>
-                <div class="rights" data-aos="fade-right" data-aos-delay="50" data-aos-duration="500">© Всі права
+                <div class="rights">© Всі права
                     захищені 2022</div>
             </div>
         </footer>
