--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <link type="image/png" sizes="96x96" rel="icon" href="./assets/images/favicons/96x96.png">
     <link type="image/png" sizes="120x120" rel="icon" href="./assets/images/favicons/120x120.png">
 
-
-
     <title>FAST.</title>
 </head>
 
 <body>
     <div class="wrapper">
+        <div class="loader">
+            <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+        </div>
         <div class="safe-container">
             <header class="header container header-container">
                 <div class="header-top-bar">
@@ -403,9 +404,6 @@
             </div>
         </footer>
     </div>
-
-
-
 
     <script src="./js/main.js"></script>
     <script src="./js/accordion.js"></script>
